--- a/package.json
+++ b/package.json
@@ -28,15 +28,29 @@
     "@angular/core": "^21.1.0",
     "@angular/forms": "^21.1.0",
     "@angular/platform-browser": "^21.1.0",
+    "@angular/platform-browser-dynamic": "^21",
     "@angular/router": "^21.1.0",
+    "@primeuix/themes": "^2.0.0",
+    "@tailwindcss/postcss": "^4.1.11",
+    "chart.js": "4.4.2",
+    "leaflet": "^1.9.4",
+    "primeclt": "^0.1.5",
+    "primeicons": "^7.0.0",
+    "primeng": "^21.0.2",
     "rxjs": "~7.8.0",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^21.1.3",
     "@angular/cli": "^21.1.3",
     "@angular/compiler-cli": "^21.1.0",
+    "@types/leaflet": "^1.9.21",
+    "autoprefixer": "^10.4.20",
     "jsdom": "^27.1.0",
+    "postcss": "^8.5.6",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^4.1.11",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
   }
